<resources>
    <string name="app_name">nKart</string>
    <string name="splash_title_1">Free\nDelivery</string>
    <string name="splash_title_2">45 Days\nMoney Returns</string>
    <string name="splash_title_3">Secure\nPayment</string>
    <string name="splash_description_1">Description 1 Lorem ipsum is imply dummy text of the printing and typesetting industry. Lorem ipsum is imply dummy text of the printing and typesetting industry. </string>
    <string name="splash_description_2">Description 2 Lorem ipsum is imply dummy text of the printing and typesetting industry. Lorem ipsum is imply dummy text of the printing and typesetting industry. </string>
    <string name="splash_description_3">Description 3 Lorem ipsum is imply dummy text of the printing and typesetting industry. Lorem ipsum is imply dummy text of the printing and typesetting industry. </string>

    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="search_item">Search product by name, category</string>
    <string name="category">Categories</string>
    <string name="viewAll">View All</string>
    <string name="total_amount">Total Amount : ₹ %1$s</string>
    <string name="product_price">₹ %1$s</string>
    <string name="product_price_strike">₹ <del>%1$s</del></string>
    <string name="trendingItem">Trending Items</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be greater then 6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="back">Back</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="add_new_address">Add new address</string>
    <string name="save">Save</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="strike_mrp">MRP ₹ <del>1299</del></string>
    <string name="strike_text"><del>%1$s</del></string>
    <string name="all">All</string>
    <string name="pelase_wait">Please wait...</string>
    <string name="new_collection">New Collection</string>
    <string name="account">Account</string>
    <string name="view_order">View Order</string>
    <string name="wishlist">Wishlist</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="my_account">My Account</string>
    <string name="addresses">Addresses</string>
    <string name="shipping_to">Shipping to</string>
    <string name="add_new">Add new</string>
    <string name="set_default">Set default</string>
    <string name="checkout" >Checkout</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="error_firstname">Please enter first name</string>
    <string name="error_lastname">Please enter last name</string>
    <string name="error_email_empty">Please enter email address</string>
    <string name="error_email_invalid">Please enter valid email address</string>
    <string name="error_mobile_empty">Please enter mobile number</string>
    <string name="error_password_empty">Please enter passrod</string>
    <string name="error_confirm_password_empty">Please enter confirm password</string>
    <string name="error_password_not_match">Password and Confirma password not match</string>
    <string name="error_password_length">Password must be greater than 6 character</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="invalid_email_or_password">Invalid email or password.\nPlease try again.</string>
    <string name="empty_cart">Your shopping bag is empty.</string>
    <string name="empty_wishlist">Your Wishlist is empty.</string>
    <string name="click_on_continue_shopping">Click on continue shopping and add item into cart</string>
    <string name="discount_label">Discount</string>
    <string name="total_label">Final Amount</string>

</resources>