<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.kk.nkart.ui.view.cart.CartViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="1px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/toolbar"
                layout="@layout/view_toolbar"
                android:elevation="1px"
                app:layout_scrollFlags="enterAlways|scroll" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/emptyView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="@dimen/dimen_100dp"
                android:alpha="0.5"
                android:src="@drawable/ic_empty_cart" />

            <TextView
                style="@style/text_h3"
                android:gravity="center"
                android:text="@string/empty_cart"
                android:textColor="@color/black_a" />


            <TextView
                style="@style/text_h4"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:gravity="center"
                android:paddingHorizontal="@dimen/dimen_30dp"
                android:text="@string/click_on_continue_shopping"
                android:textColor="@color/black_a" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnContinue"
                style="@style/roundPrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_48dp"
                android:layout_marginEnd="@dimen/dimen_1dp"
                android:layout_weight="1"
                android:onClick="@{ () -> viewModel.navigateToDashboard() }"
                android:background="@color/green"
                android:enabled="true"
                android:text="@string/continue_shopping" />


            <Button
                android:id="@+id/btnCheckout"
                style="@style/roundPrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_48dp"
                android:layout_marginStart="@dimen/dimen_1dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/checkout" />


        </LinearLayout>
    </LinearLayout>
</layout>