<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModelInstance"
            type="com.kk.nkart.ui.view.dashboard.DashboardViewModel" />

        <variable
            name="userEmail"
            type="String" />


    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/headerDrawer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_e"
                android:paddingStart="@dimen/dimen_8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnCross"
                    android:layout_width="@dimen/dimen_48dp"
                    android:layout_height="@dimen/dimen_48dp"
                    android:layout_gravity="right|top"
                    android:onClick="@{() -> viewModelInstance.crossButtonClick()}"
                    android:padding="@dimen/dimen_12dp"
                    android:tint="@color/black_7"
                    app:srcCompat="@drawable/ic_cross" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/layoutNoLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:visibility="@{viewModelInstance.isLogin ? View.GONE : View.VISIBLE}"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_16sp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/dimen_120dp"
                        android:layout_height="@dimen/dimen_120dp"
                        app:srcCompat="@drawable/info_icon_2" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:onClick="@{(view) -> viewModelInstance.loginClick(view)}"
                        android:text="@string/login"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/dimen_20sp"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/layoutUserDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewModelInstance.isLogin ? View.VISIBLE : View.GONE}"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_16sp"
                    >

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/dimen_120dp"
                        android:layout_height="@dimen/dimen_120dp"
                        android:layout_gravity="left"
                        app:srcCompat="@drawable/info_icon_2" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:text="@{viewModelInstance.userName}"
                        android:textColor="@color/black_4"
                        android:textSize="@dimen/dimen_20sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:text="@{viewModelInstance.emailAddress}"
                        android:textColor="@color/black_7"
                        android:textSize="@dimen/dimen_16sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </FrameLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_weight="1"
                android:paddingBottom="@dimen/dimen_16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headerDrawer">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/layoutContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <com.kk.nkart.ui.components.CustomNavigationItem
                        android:id="@+id/menuCollection"
                        style="@style/navigation_item"
                        android:onClick="@{(view) -> viewModelInstance.newCollectionClick(view)}"
                        app:icon="@drawable/ic_flag"
                        app:title="@string/new_collection" />

                    <com.kk.nkart.ui.components.CustomNavigationItem
                        android:id="@+id/menuCategory"
                        style="@style/navigation_item"
                        android:onClick="@{(view) -> viewModelInstance.categoryClick(view)}"
                        app:icon="@drawable/ic_categories"
                        app:title="@string/category" />

                    <com.kk.nkart.ui.components.CustomNavigationItem
                        android:id="@+id/menuAddress"
                        style="@style/navigation_item"
                        android:onClick="@{(view) -> viewModelInstance.addressClick(view)}"
                        android:visibility="@{viewModelInstance.isLogin ? View.VISIBLE : View.GONE}"
                        app:icon="@drawable/ic_person"
                        app:title="@string/addresses" />

                    <com.kk.nkart.ui.components.CustomNavigationItem
                        android:id="@+id/menuOrder"
                        style="@style/navigation_item"
                        android:onClick="@{(view) -> viewModelInstance.viewOrderClick(view)}"
                        android:visibility="@{viewModelInstance.isLogin ? View.VISIBLE : View.GONE}"
                        app:icon="@drawable/ic_order_filled"
                        app:title="@string/view_order" />

                    <com.kk.nkart.ui.components.CustomNavigationItem
                        android:id="@+id/menuWishlist"
                        style="@style/navigation_item"
                        android:onClick="@{(view) -> viewModelInstance.wishListClick(view)}"
                        android:visibility="@{viewModelInstance.isLogin ? View.VISIBLE : View.GONE}"
                        app:icon="@drawable/ic_heart_filled"
                        app:title="@string/wishlist" />

                    <com.kk.nkart.ui.components.CustomNavigationItem
                        android:id="@+id/menuNotification"
                        style="@style/navigation_item"
                        android:onClick="@{(view) -> viewModelInstance.notificationClick(view)}"
                        app:icon="@drawable/ic_bell"
                        app:title="@string/notification" />


                    <com.kk.nkart.ui.components.CustomNavigationItem
                        android:id="@+id/menuSettings"
                        style="@style/navigation_item"
                        android:onClick="@{(view) -> viewModelInstance.settingClick(view)}"
                        app:icon="@drawable/ic_setting"
                        app:title="@string/settings" />

                    <com.kk.nkart.ui.components.CustomNavigationItem
                        android:id="@+id/menuHelp"
                        style="@style/navigation_item"
                        android:onClick="@{(view) -> viewModelInstance.helpClick(view)}"
                        app:icon="@drawable/ic_help"
                        app:title="Help" />

                    <com.kk.nkart.ui.components.CustomNavigationItem
                        android:id="@+id/menuLogout"
                        style="@style/navigation_item"
                        android:onClick="@{() -> viewModelInstance.onLogoutClick()}"
                        android:visibility="@{viewModelInstance.isLogin ? View.VISIBLE : View.GONE}"
                        app:icon="@drawable/ic_logout"
                        app:isSelected="true"
                        app:title="@string/logout" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </ScrollView>
</layout>