<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/totalAmountView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_5dp"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp">

                <TextView
                    style="@style/text_h3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Product Price" />

                <TextView
                    android:id="@+id/product_price"
                    style="@style/text_h3"
                    android:layout_alignParentRight="true"
                    android:text="@string/product_price" />

                <TextView
                    style="@style/text_h4"
                    android:textColor="@color/black_a"
                    android:layout_below="@id/product_price"
                    android:text="@string/discount_label" />

                <TextView
                    android:id="@+id/total_discount_value"
                    style="@style/text_h4"
                    android:textColor="@color/black_a"
                    android:layout_below="@id/product_price"
                    android:layout_alignParentRight="true"
                    android:text="@string/product_price" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/total_discount_value"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:background="@color/divider" />

                <TextView
                    style="@style/text_h2_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider"
                    android:text="@string/total_label" />

                <TextView
                    android:id="@+id/total_cart_price_value"
                    style="@style/text_h2_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider"
                    android:layout_alignParentRight="true"
                    android:text="@string/product_price" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>